# hops

./: default.nix  hops.cabal  hops.nix  shell.nix  static.nix
HOPS/: GF.hs
HOPS/GF/CFrac/: QD.hs
tests/: cli-properties.sh
