Name:                hops
Version:             0.8.5
Synopsis:            Handy Operations on Power Series
Description:         HOPS is a DSL for power series and integer sequences.
Homepage:            http://akc.is/hops
License:             BSD3
License-file:        LICENSE
Author:              Anders Claesson
Maintainer:          anders.claesson@gmail.com
Category:            Math
Build-type:          Simple
Extra-Source-Files:  README.md tests/cli-properties.sh
Data-Files:          data/stub.db

cabal-version:       1.12
Tested-With:         GHC == 9.10.3

source-repository head
  type:                git
  location:            git://github.com/akc/hops.git

Library
  default-language:  Haskell2010

  Exposed-modules:     HOPS.Config
                       HOPS.DB
                       HOPS.Entry
                       HOPS.OEIS
                       HOPS.Options
                       HOPS.Pretty
                       HOPS.Utils.Matrix
                       HOPS.Utils.Parse
                       HOPS.GF
                       HOPS.GF.CFrac.Contraction
                       HOPS.GF.CFrac.Hankel
                       HOPS.GF.CFrac.Poly
                       HOPS.GF.CFrac.QD
                       HOPS.GF.CFrac.Reference
                       HOPS.GF.Const
                       HOPS.GF.Hankel
                       HOPS.GF.Rat
                       HOPS.GF.Rats
                       HOPS.GF.Series
                       HOPS.GF.Transform

  Other-modules:       Paths_hops

  ghc-options:         -Wall -Wno-unused-do-bind
                       -Wno-missing-signatures -O2

  Build-depends:       aeson >=0.8,
                       attoparsec >=0.11,
                       base >=4 && <5,
                       bytestring >=0.10,
                       containers >=0.5,
                       directory >=1.2,
                       filepath >=1.3,
                       optparse-applicative >=0.10,
                       text >=0.11,
                       transformers >=0.4,
                       vector >=0.10

Executable hops
  default-language:  Haskell2010
  hs-source-dirs:    app
  Main-is:             hops.hs

  ghc-options:         -Wall -Wno-unused-do-bind
                       -Wno-missing-signatures
                       -threaded -O2 -with-rtsopts=-N

  Build-depends:       hops,
                       aeson >=0.8,
                       base >=4 && <5,
                       bytestring >=0.10,
                       containers >=0.5,
                       deepseq >=1.3,
                       directory >=1.2,
                       parallel >=3.2

Test-Suite Props
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  Main-is:             Properties.hs
  Build-depends:       hops,
                       base >=4 && <5,
                       bytestring >=0.10,
                       containers >=0.5,
                       vector >=0.10,
                       QuickCheck >=2.7

Test-Suite CLI-Props
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  Main-is:             CLIProperties.hs
  Build-depends:       base >=4 && <5,
                       process >=1.2
